# experiment-claude-agent

./: .gitignore  01_basic_query.py  02_message_types.py  03_built_in_tools.py  04_system_prompt.py  05_client_multiturn.py  06_streaming_input.py  CLAUDE.md  pyproject.toml  test_can_use_tool.py  test_permissions.py  test_user_message.py
docs/: 01_overview.md  02_quickstart.md  03_python_api_reference.md  04_hooks.md  05_sessions.md  06_mcp.md  07_subagents.md  08_permissions.md  09_hosting.md  10_demos.md
