[project]
name = "claude-agent"
version = "0.1.0"
description = "Experimental project for learning the Claude Agent SDK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.1.0",
]

[tool.uv.sources]
claude-agent-sdk = { git = "https://github.com/anthropics/claude-agent-sdk-python.git" }
